--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@zxing/library": "^0.18.6",
     "core-js": "^3.6.5",
+    "jimp": "^0.16.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
